FDN-1807: Upgrade to java 17 (#409)
* FDN-1807: Upgrade to java 17